# ccforensics

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  greptile-gate.yml
docs/: sc5-verification.md
docs/plans/: 2026-04-21-initial-implementation.md  2026-05-02-cache-tools-tier.md  2026-05-05-thrash-detection.md
docs/reviews/: 2026-04-21-m0-m3-review-findings.md  2026-04-23-codebase-audit.md
docs/specs/: 2026-05-02-cache-tools-tier-design.md  2026-05-05-thrash-detection-design.md  design.md  problem-statement.md
scripts/: redact_jsonl.py
src/ccforensics/: attribution.py  cli.py  export.py  index.py  jsonl.py  models.py  paths.py  pricing.py  registry.py  skills.py  thrash.py  thrash_calibration.py  tree.py
tests/: conftest.py  test_aggregate_and_plugins.py  test_attribution.py  test_cache_metrics.py  test_cli.py  test_cost_annotation.py  test_escalation_detect.py  test_export.py  test_ground_truth.py  test_index.py  test_index_reconcile.py  test_index_schema.py  test_index_walk.py  test_jsonl_dedup.py  test_jsonl_multi_tool.py  test_jsonl_parse.py  test_models.py  test_paths.py  test_pricing.py  test_real_ingest.py  test_registry.py  test_report_dates.py  test_report_format.py  test_report_resolver.py  test_report_session.py  test_report_session_list.py  test_session_summaries.py  test_skills.py  test_thrash_calibration.py  test_thrash_report.py  test_thrash_score.py  test_thrash_signals.py  test_tools_report.py  test_tree.py
tests/__snapshots__/: test_export.ambr
tests/fixtures/basic/: s1.jsonl
(+18 files in other folders)
