[project]
name = "ccforensics"
version = "0.1.0"
description = "Claude Code session forensics — plugin, skill, and subagent cost attribution"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Jason Lixfeld", email = "jason@lixfeld.ca" }]
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.6",
    "platformdirs>=4.2",
]

[project.scripts]
ccforensics = "ccforensics.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "syrupy>=4.6",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["src/ccforensics"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
